--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
   <title>Dry.Coffee76</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    /* Custom keyframes for spinning animation */
+    /* Animation de rotation pour l'écran de chargement */
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
     .animate-spin {
-      animation: spin 2s linear infinite; /* Spin indefinitely over 2 seconds */
+      animation: spin 2s linear infinite;
     }
-    /* Ensure loading screen is full-screen and centered */
+    /* Écran de chargement plein écran */
     #loading-screen {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(17, 24, 39, 0.95); /* Semi-transparent dark background */
+      background: rgba(17, 24, 39, 0.95);
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -33,7 +33,7 @@
       opacity: 0;
       visibility: hidden;
     }
-    /* Hamburger menu icon */
+    /* Style du bouton hamburger */
     .hamburger {
       display: flex;
       flex-direction: column;
@@ -48,18 +48,37 @@
       background-color: white;
       transition: all 0.3s ease;
     }
-    /* Menu styles */
+    /* Bouton de fermeture du menu */
+    .close-btn {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      font-size: 1.5rem;
+      color: white;
+      cursor: pointer;
+    }
+    /* Styles du menu */
     #nav-menu {
-      transition: transform 0.3s ease;
+      position: fixed;
+      top: 0;
+      right: 0;
+      height: 100%;
+      width: 16rem;
+      background: #1f2937;
+      padding: 1.5rem;
+      z-index: 1000;
       transform: translateX(100%);
+      transition: transform 0.3s ease;
+      display: none;
     }
     #nav-menu.open {
       transform: translateX(0);
+      display: block;
     }
   </style>
 </head>
 <body class="bg-gray-900 text-white min-h-screen">
-  <!-- Loading Screen -->
+  <!-- Écran de chargement -->
   <div id="loading-screen">
     <img src="chaton.jpg" alt="Loading Logo" class="h-24 w-24 animate-spin">
     <p class="text-white text-lg mt-4">Chargement...</p>
@@ -71,19 +90,20 @@
         <img src="chaton.jpg" alt="Logo Chaton" class="h-12 w-12 mr-2">
         <h1 class="text-3xl font-bold">Dry.Coffee76</h1>
       </div>
-      <!-- Hamburger Button -->
+      <!-- Bouton hamburger -->
       <div class="hamburger" onclick="toggleMenu()">
         <span></span>
         <span></span>
         <span></span>
       </div>
     </div>
-    <!-- Navigation Menu (hidden by default) -->
-    <nav id="nav-menu" class="fixed top-0 right-0 h-full w-64 bg-gray-800 p-6 z-50 transform translate-x-full">
+    <!-- Menu de navigation -->
+    <nav id="nav-menu">
+      <span class="close-btn" onclick="toggleMenu()">✖</span>
       <ul class="flex flex-col space-y-4 mt-16">
         <li><a href="#" onclick="showAccueil(); toggleMenu()" class="text-lg hover:text-green-400">🏠Accueil</a></li>
         <li><a href="#" onclick="showProducts(); toggleMenu()" class="text-lg hover:text-green-400">Menu📝</a></li>
-        <li><a href="https://dym168.org/dry_coffee76" class="text-lg hover:text-green-400">📱Contact</a></li>
+        <li><a href="https://dym168.org/dry_coffee76" onclick="toggleMenu()" class="text-lg hover:text-green-400">📱Contact</a></li>
         <li><a href="#" onclick="showInformation(); toggleMenu()" class="text-lg hover:text-green-400">Informationℹ️</a></li>
       </ul>
     </nav>
@@ -92,10 +112,10 @@
   <main class="container mx-auto p-6">
     <!-- Section d'accueil (visible par défaut) -->
     <section id="accueil" class="mb-6">
-      <div class="flex flex-col items-center space-y-8"> <!-- Use flex-col to stack logo and text vertically -->
+      <div class="flex flex-col items-center space-y-8">
         <div class="p-4 text-center">
           <p class="text-xl md:text-2xl font-bold text-green-400 drop-shadow-lg">
-            Découvrez notre Mini-app📲 avec de bonnes interactions en haut a droite 👆
+            Découvrez notre Mini-app📲 avec de bonnes interactions en haut à droite 👆
           </p>
         </div>
         <img src="chaton.jpg" alt="Logo Dry.Coffee76" class="h-48 w-48 md:h-64 md:w-64 object-cover rounded-full">
@@ -201,19 +221,20 @@
   </footer>
 
   <script>
-    // Hide loading screen after exactly 3 seconds
+    // Cacher l'écran de chargement après 3 secondes
     setTimeout(() => {
       const loadingScreen = document.getElementById('loading-screen');
       loadingScreen.classList.add('hidden');
-    }, 3000); // 3000ms = 3 seconds
+    }, 3000);
 
-    // Toggle the navigation menu
+    // Basculer le menu de navigation
     function toggleMenu() {
       const menu = document.getElementById('nav-menu');
-      menu.classList.toggle('hidden');
+      console.log('Clic sur le menu hamburger ou bouton de fermeture'); // Débogage
+      menu.classList.toggle('open');
     }
 
-    // Fonction pour afficher la section d'accueil et masquer les autres sections
+    // Afficher la section d'accueil et cacher les autres
     function showAccueil() {
       document.getElementById('accueil').classList.remove('hidden');
       document.getElementById('products').classList.add('hidden');
@@ -223,7 +244,7 @@
       document.getElementById('information').classList.add('hidden');
     }
 
-    // Fonction pour afficher la section des produits et masquer les autres sections
+    // Afficher la section des produits et cacher les autres
     function showProducts() {
       document.getElementById('accueil').classList.add('hidden');
       document.getElementById('products').classList.remove('hidden');
@@ -233,7 +254,7 @@
       document.getElementById('information').classList.add('hidden');
     }
 
-    // Fonction pour afficher la section de description correspondant au produit et masquer les autres sections
+    // Afficher la description d'un produit et cacher les autres sections
     function showDescription(product) {
       document.getElementById('accueil').classList.add('hidden');
       document.getElementById('products').classList.add('hidden');
@@ -241,7 +262,7 @@
       document.getElementById(`description-${product}`).classList.remove('hidden');
     }
 
-    // Fonction pour afficher la section d'information et masquer les autres sections
+    // Afficher la section d'information et cacher les autres
     function showInformation() {
       document.getElementById('accueil').classList.add('hidden');
       document.getElementById('products').classList.add('hidden');
@@ -251,7 +272,7 @@
       document.getElementById('information').classList.remove('hidden');
     }
 
-    // Afficher la section d'accueil par défaut après le chargement
+    // Afficher la section d'accueil par défaut
     window.onload = function() {
       showAccueil();
     };
