--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <ul class="flex flex-col space-y-4 mt-16">
         <li><a href="#" onclick="showAccueil(); toggleMenu()" class="text-lg hover:text-green-400">🏠Accueil</a></li>
         <li><a href="#" onclick="showProducts(); toggleMenu()" class="text-lg hover:text-green-400">Menu📝</a></li>
-        <li><a href="https://dym168.org/dry_coffee76" onclick="toggleMenu()" class="text-lg hover:text-green-400">📱Contact</a></li>
+        <li><a href="https://signal.me/#eu/gHsUO0hCWSrM3TLgrhorIhP_M40Qf0yJz6eht09COk5trLXpo8JOHpUqmGNYIGKX" onclick="toggleMenu()" class="text-lg hover:text-green-400">📱Contact</a></li>
         <li><a href="#" onclick="showInformation(); toggleMenu()" class="text-lg hover:text-green-400">Informationℹ️</a></li>
       </ul>
     </nav>
@@ -155,7 +155,7 @@
         👎Pas beaucoup de stock🛍️, <br>
         dépêcher vous les frérots 😉
       </p>
-      <a href="https://dym168.org/dry_coffee76" class="mt-4 w-full bg-green-600 hover:bg-green-700 text-white py-2 rounded-md text-center inline-block">Contact</a>
+      <a href="https://signal.me/#eu/gHsUO0hCWSrM3TLgrhorIhP_M40Qf0yJz6eht09COk5trLXpo8JOHpUqmGNYIGKX" class="mt-4 w-full bg-green-600 hover:bg-green-700 text-white py-2 rounded-md text-center inline-block">Contact</a>
       <button onclick="showProducts()" class="mt-4 w-full bg-gray-600 hover:bg-gray-700 text-white py-2 rounded-md">Retour</button>
     </section>
 
@@ -176,7 +176,7 @@
         L’alliance parfaite entre la douceur sucrée de la cerise et la fraîcheur acidulée du citron.<br>
         Un équilibre savoureux qui réveille les papilles et laisse une note légère et agréable en bouche.
       </p>
-      <a href="https://dym168.org/dry_coffee76" class="mt-4 w-full bg-green-600 hover:bg-green-700 text-white py-2 rounded-md text-center inline-block">Contact</a>
+      <a href="https://signal.me/#eu/gHsUO0hCWSrM3TLgrhorIhP_M40Qf0yJz6eht09COk5trLXpo8JOHpUqmGNYIGKX" class="mt-4 w-full bg-green-600 hover:bg-green-700 text-white py-2 rounded-md text-center inline-block">Contact</a>
       <button onclick="showProducts()" class="mt-4 w-full bg-gray-600 hover:bg-gray-700 text-white py-2 rounded-md">Retour</button>
     </section>
 
@@ -195,7 +195,7 @@
         <br>
         Description : elle a un bon parfum, très propre et elle pousse fort
       </p>
-      <a href="https://dym168.org/dry_coffee76" class="mt-4 w-full bg-green-600 hover:bg-green-700 text-white py-2 rounded-md text-center inline-block">Contact</a>
+      <a href="https://signal.me/#eu/gHsUO0hCWSrM3TLgrhorIhP_M40Qf0yJz6eht09COk5trLXpo8JOHpUqmGNYIGKX" class="mt-4 w-full bg-green-600 hover:bg-green-700 text-white py-2 rounded-md text-center inline-block">Contact</a>
       <button onclick="showProducts()" class="mt-4 w-full bg-gray-600 hover:bg-gray-700 text-white py-2 rounded-md">Retour</button>
     </section>
 
